# runonjenkins

./: .gitignore  Cargo.toml  Makefile
src/: build_param_type.rs  build_parameter.rs  build_request.rs  build_server.rs  cli.rs  constants.rs  errors.rs  flavor.rs  get_os.rs  git.rs  gpi.rs  lib.rs  machine_os.rs  main.rs  minifest.rs  package_build_request.rs  packalaka_tags.rs  platform.rs  svn.rs  traits.rs  utils.rs  vcs_system.rs
src/from_gpi/: gpi.rs  mod.rs  packalaka_tags.rs  request.rs
src/from_manifest/: minifest.rs  mod.rs  request.rs
