[package]
name = "yamly"
version = "0.1.0"
authors = ["jonathan gerber <jlgerber@gmail.com>"]
edition = "2018"

[dependencies]
serde_yaml = "0.8.8"
serde = { version = "1.0.90", features = ["derive"] }
serde-aux = "0.6.1"
url = "1.7.2"
reqwest = "0.9.16"
serde_json = "1.0.39"
serde_derive = "1.0.90"
