[package]
name = "pkg-build-remote"
version = "0.2.1"
authors = ["jonathan gerber <jlgerber@gmail.com>"]
edition = "2018"

[dependencies]
serde_yaml = "0.8.8"
serde = { version = "1.0.90", features = ["derive"] }
serde-aux = "0.6.1"
url = "1.7.2"
reqwest = "0.9.16"
serde_json = "1.0.39"
serde_derive = "1.0.90"
shellfn = "0.1.1"
failure = "0.1.5"
git2 = "0.8.0"
structopt = "0.2.15"
serde_urlencoded = "0.5.5"
prettytable-rs = "0.8.0"
log = "0.4.6"
pretty_env_logger = "0.3.0"
