[package]
name = "pkg-build-remote"
version = "0.5.2"
authors = ["jonathan gerber <jlgerber@gmail.com>"]
edition = "2018"

[dependencies]
serde_yaml = "0.8.11"
serde = { version = "1.0.106", features = ["derive"] }
serde-aux = "0.6.1"
url = "2.1.1"
#reqwest = "0.10.6"
serde_json = "1.0.51"
serde_derive = "1.0.106"
shellfn = "0.1.1"
strum = "0.18.0"
strum_macros = "0.18.0"
failure = "0.1.7"
#fails to build if we go higher
git2 = "0.8.0"
structopt = "0.3.13"
serde_urlencoded = "0.6.1"
prettytable-rs = "0.8.0"
log = "0.4.8"
pretty_env_logger = "0.4.0"
percent-encoding="1.0.1"

[dependencies.reqwest]
version = "0.10.6"
features = ["blocking"]
